# potatoetomatoe3

./: .env.example  .gitattributes  .gitignore  README.md  install-deps-distrobox.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  version.txt  vite.config.ts
GamesAssembly/: package.json  tsconfig.json
docs/: game-browser-storage.md  offline-downloader.md  play-analytics.md  release.md
flatpak/: com.potatotomato.games.desktop  com.potatotomato.games.yml
puller/: package.json
scripts/: README.md  audit-offline-mirrors.mjs  copy-404-for-pages.mjs  dedupe-games.mjs  dev-with-puller.mjs  download-games-offline.js  ensure-all-local.mjs  ensure-all-offline-bundles.mjs  fix-poki-offline-loaders.mjs  generate-games-list.js  import-poki-catalog.mjs  import-y8-catalog.mjs  localize-iframe-games.js  make-all-local.mjs  migrate-offline-bundle-to-offline.mjs  mirror-game-url.mjs  mirror-portal-url-list.mjs  offline-mirror-worker.mjs  playwright-smoke-games.mjs  port-3kh0-games.js  port-game.js  port-github-games.js  port-itch-games.js  port-js13k-games.js  port-phaser-examples.js  port-playcanvas-games.js  port-poki-games.js  prepare-github-pages.mjs  promote-offline-bundle.mjs  restore-games-from-build.mjs  run-catalog-pipeline.mjs  safe-offline-health.mjs  scan-external-iframes.mjs  seed-offline-from-online.mjs  strip-missing-thumbnail-paths.mjs  sync-game-thumbnails.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: puller-sidecar-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+4425 files in other folders)
